--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,12 +1,30 @@
 micronaut:
   application:
     name: keyManagerGrpc
+  server:
+    port: 8080
+
+grpc:
+  server:
+    port: ${SERVER_PORT:50051}
+    keep-alive-time: 1h
+    max-inbound-message-size: 1024
+
 datasources:
   default:
-    url: jdbc:postgresql://localhost:5432/postgres
+    url: ${$POSTGRES_URL:`jdbc:postgresql://localhost:5432/db_desafio_pix`}
     driverClassName: org.postgresql.Driver
-    username: postgres
-    password: ''
+    username: ${POSTGRES_USER:`postgres`}
+    password: ${POSTGRES_PASSWORD:`postgres`}
     schema-generate: CREATE_DROP
     dialect: POSTGRES
-jpa.default.properties.hibernate.hbm2ddl.auto: update
+
+### Jpa properties ###
+jpa.default.properties.hibernate:
+  hbm2ddl.auto: update
+  show_sql: true
+  format_sql: true
+
+### External APIs ###
+erp.itau.contas.url: ${ITAU_URL:`http://localhost:9091`}
+bcb.pix.url: ${BCB_URL:`http://localhost:8082`}
