--- a/src/test/resources/application-test.yml
+++ b/src/test/resources/application-test.yml
@@ -1,4 +1,15 @@
+micronaut:
+  server:
+    port: 8081
 datasources:
   default:
-    url: jdbc:tc:postgresql:12:///postgres
-    driverClassName: org.testcontainers.jdbc.ContainerDatabaseDriver
+    url: jdbc:h2:mem:devDb;LOCK_TIMEOUT=10000;DB_CLOSE_ON_EXIT=FALSE
+    driverClassName: org.h2.Driver
+    username: sa
+    password: ''
+    schema-generate: CREATE_DROP
+    dialect: H2
+jpa.default.properties.hibernate.hbm2ddl.auto: update
+### External APIs ###
+erp-itau: ${ITAU_URL:`http://localhost:9091`}
+bcb: ${BCB_URL:`http://localhost:8082`}
